add the open-data link snippet to the questionary results page

--- a/css/archive-edu_quest_results.css
+++ b/css/archive-edu_quest_results.css
@@ -15,3 +15,6 @@ main .inside-article .title.controls .cf::after {
   clear: both;
   display: table;
 }
+main .inside-article section#opendata-section {
+  margin-top: 55px;
+}
